# spinning-triangle

./: CMakeLists.txt  main.cpp
include/: client.hpp  shmHandler.hpp
src/: CMakeLists.txt  client.cpp  main.cpp  oega.cpp  shmHandler.cpp  test.cpp
